# far-gvfs

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
configs/plug/: GvfsEng.lng  GvfsRus.lng
src/: Configuration.cpp  Configuration.h  Crypto.cpp  Crypto.h  GvfsService.cpp  GvfsService.h  GvfsServiceException.h  GvfsServiceMonitor.cpp  GvfsServiceMonitor.h  JobUnitQueue.h  KeyBarTitlesHelper.cpp  KeyBarTitlesHelper.h  LngStringIDs.h  MountPoint.cpp  MountPoint.h  MountPointStorage.cpp  MountPointStorage.h  Plugin.cpp  Plugin.h  PluginMain.cpp  RegistryStorage.cpp  RegistryStorage.h  SecretServiceStorage.cpp  SecretServiceStorage.h  TextFormatter.cpp  TextFormatter.h  UiCallbacks.cpp  UiCallbacks.h  dialogs.cpp  dialogs.h  glibmmconf.h  gvfsdlg.cpp  gvfsdlg.h
